# matrix

./: .gitignore  CMakeLists.txt
build1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Matrix.sln  Matrix.vcxproj  Matrix.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  log.txt
build1/Debug/: Matrix.ilk
build1/Matrix.dir/Debug/: Matrix.exe.recipe
build1/Matrix.dir/Debug/Matrix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build1/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build1/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build1/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build1/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
headers/: matrix.h  matrix_lv3.h  menu.h
src/: main.cxx  matrix.cxx  matrix_fx.cxx  matrix_lv3.cxx  menu.cxx
